package system.model.dao;

public interface Idable {

    String getId();
}
