@startuml

title __DAO's Class Diagram__\n

  package system.model {
    package system.model.dao {
      class Dao {
          {static} + SQLITE_NOT_MYSQL : boolean
          - tableName : String
          + Dao()
          + getAll()
          + add()
          + remove()
          + getTableName()
          + setTableName()
      }
    }
  }
  

  package system.model {
    package system.model.dao {
      interface Idable {
          {abstract} + getId()
      }
    }
  }
  

  package system.model {
    package system.model.dao {
      class PlayerDao {
          - players : LinkedList<Player>
          + addPlayer()
          + getPlayer()
          + removePlayer()
          + getPlayers()
          + setPlayers()
      }
    }
  }
  

  package system.model {
    package system.model.dao {
      class QuestionDao {
          + QuestionDao()
      }
    }
  }
  

  package system.model {
    package system.model.dao {
      class QuestionGroupDao {
          + QuestionGroupDao()
      }
    }
  }
  

  package system.model {
    package system.model.dao {
      class QuizDao {
          + QuizDao()
      }
    }
  }
  

  package system.model {
    package system.model.dao {
      class QuizGroupDao {
          + QuizGroupDao()
      }
    }
  }
  

  package system.model {
    package system.model.dao {
      class QuizPartDao {
          + QuizPartDao()
      }
    }
  }
  

  package system.model {
    package system.model.dao {
      class ResultDao {
          + ResultDao()
      }
    }
  }
  

  package system.model {
    package system.model.dao {
      class UserDao {
          + UserDao()
      }
    }
  }
  

  Dao o-- MySQLDatabaseService : databaseService
  QuestionDao -up-|> Dao
  QuestionGroupDao -up-|> Dao
  QuizDao -up-|> Dao
  QuizGroupDao -up-|> Dao
  QuizPartDao -up-|> Dao
  ResultDao -up-|> Dao
  UserDao -up-|> Dao


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
